--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "echarts": "^5.2.1",
     "register-service-worker": "^1.7.1",
     "vant": "^2.12.0",
     "vant-doc": "^1.0.20",
