--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
-    "echarts": "^5.2.1",
+    "echarts": "5.2.1",
+    "element-ui": "^2.15.8",
     "register-service-worker": "^1.7.1",
     "vant": "^2.12.0",
     "vant-doc": "^1.0.20",
@@ -21,7 +23,9 @@
     "vue-router": "^3.2.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.18.5",
+    "xslx": "^1.0.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -43,7 +47,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "4.14.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
@@ -66,7 +70,10 @@
     },
     "rules": {
       "camelcase": "off",
-      "@typescript-eslint/camelcase": 0
+      "@typescript-eslint/camelcase": 0,
+      "@typescript-eslint/no-this-alias": [
+        "off"
+      ]
     },
     "overrides": [
       {
