--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "echarts": "5.2.1",
-    "element-ui": "^2.15.8",
+    "element-ui": "^2.15.14",
     "register-service-worker": "^1.7.1",
     "vant": "^2.12.0",
     "vant-doc": "^1.0.20",
@@ -43,6 +43,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
